<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#55000000"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="24sp"
        android:background="@color/primary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="56dp"/>

    <LinearLayout
        android:id="@+id/user_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="12dp"
            android:src="#AA000000"
            app:riv_mutate_background="true"
            app:riv_oval="true"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg">

        <LinearLayout
            android:id="@+id/date_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="16dp"
                android:alpha="0.5"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_access_time_black" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/tertiary_text_light"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/ic_ellipsize"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_arrow_drop_down_black_18dp"
                android:alpha="0.5"
                android:visibility="gone"
                android:contentDescription="@string/icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"/>

    <LinearLayout android:id="@+id/comment_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:paddingLeft="12dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                android:src="@drawable/ic_comment_black_48dp"
                android:alpha="0.5"
                android:contentDescription="@string/icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/no_comment"
                android:textColor="@android:color/tertiary_text_light"
                android:gravity="center_vertical"
                android:contentDescription="@string/no_comment"/>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0" />

    <ProgressBar android:id="@+id/related_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/related_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/related_images"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#EEEEEE"/>

</LinearLayout>
