...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_light"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textColor="@android:color/secondary_text_light"
                android:drawableLeft="@drawable/ic_place_black_18dp"
                android:drawableStart="@drawable/ic_place_black_18dp"
                android:drawablePadding="8dp"
...
